add comments page + css

--- a/less/_base.less
+++ b/less/_base.less
@@ -13,11 +13,23 @@ body {
 	padding-right: 20px;
 	max-width: 1060px;
 	margin: 0 auto;
+
+	&--block {
+		padding: 0 110px 60px;
+	}
+
+	&-form {
+		width: 560px;
+		padding: 50px 70px;
+		margin: 0 auto;
+		background: #f0f0f0;
+	}
 }
 
 .header,
 .features,
-.footer {
+.footer,
+.sentence {
 	background: #131415;
 	color: #fff;
 }
@@ -45,7 +57,14 @@ body {
 	font-weight: 700;
 	text-transform: uppercase;
 	margin-bottom: 45px;
-	text-align: center;
+
+	&--center {
+		text-align: center;
+	}
+
+	&--form {
+		text-transform: none;
+	}
 }
 
 .news {
@@ -53,6 +72,34 @@ body {
 
 	&__block {
 		display: flex;
+	}
+}
+
+.feedback {
+	margin-bottom: 50px;
+}
+
+.btn {
+	width: 139px;
+	height: 45px;
+	background-color: #131415;
+	border-radius: 3px;
+	color: #fff;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	font-size: 0.8571em; // 12px
+	font-weight: 700;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	transition: .15s background-color linear;
+
+	&:hover {
+		background-color: #f89513;
+	}
+
+	&:active {
+		box-shadow: inset 0 0 5px #5e5e5e;
 	}
 }
 
