--- a/less/_contacts.less
+++ b/less/_contacts.less
@@ -15,6 +15,7 @@
 		font-weight: 700;
 		color: #f89513;
 		border-bottom: 1px solid #f89513;
+		transition: .2s all linear;
 
 		&:hover {
 			color: #fff;
