--- a/less/_social.less
+++ b/less/_social.less
@@ -8,6 +8,7 @@
 		margin-right: 13px;
 		background: #ffffff;
 		border-radius: 50%;
+		transition: .2s all linear;
 
 		&:hover {
 			background: #f89513;
