--- a/less/index.less
+++ b/less/index.less
@@ -10,3 +10,7 @@
 @import '_pagination.less';
 @import '_info.less';
 @import '_social.less';
+
+@import '_breadcrumbs.less';
+@import '_sentence.less';
+@import '_feedback-form.less';
