add services page + css

--- a/less/_base.less
+++ b/less/_base.less
@@ -15,14 +15,15 @@ body {
 	margin: 0 auto;
 
 	&--block {
-		padding: 0 110px 60px;
+		box-sizing: border-box;
+		padding: 0 110px 50px;
 	}
 
 	&-form {
 		width: 560px;
 		padding: 50px 70px;
 		margin: 0 auto;
-		background: #f0f0f0;
+		background: #f3f3f3;
 	}
 }
 
