--- a/less/index.less
+++ b/less/index.less
@@ -14,3 +14,6 @@
 @import '_breadcrumbs.less';
 @import '_sentence.less';
 @import '_feedback-form.less';
+
+@import '_services.less';
+@import '_partners.less';
