--- a/less/_pagination.less
+++ b/less/_pagination.less
@@ -43,6 +43,10 @@
 			background-color: #27273e;
 			border-radius: 3px;
 			color: #f89513;
+
+			& > .pagination__link {
+				pointer-events: none;
+			}
 		}
 	}
 
