--- a/less/_review.less
+++ b/less/_review.less
@@ -10,6 +10,13 @@
 		height: 168px;
 		border-radius: 50%;
 		margin-right: 20px;
+		overflow: hidden;
+		background: url(../images/comment0.jpg) center;
+
+		& > img {
+			width: 100%;
+			height: auto;
+		}
 	}
 
 	&__block {
