--- a/less/_features.less
+++ b/less/_features.less
@@ -1,7 +1,6 @@
 .features {
-	margin-right: -20px;
-	margin-left: -20px;
-	padding: 60px 20px 80px;
+	padding-top: 60px;
+	padding-bottom: 80px;
 
 	&__list {
 		display: flex;
@@ -18,16 +17,10 @@
 		border-radius: 50%;
 		margin: 0 auto;
 		margin-bottom: 35px;
-	
-		&--flower {
-			background: url(../images/flower.png) no-repeat center, #f89513;
-		}
-		&--star {
-			background: url(../images/star.png) no-repeat center, #f89513;
-		}
-		&--palette {
-			background: url(../images/palette.png) no-repeat center, #f89513;
-		}
+		background: #f89513;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 
 	&__head {
