--- a/less/_sentence.less
+++ b/less/_sentence.less
@@ -4,7 +4,7 @@
 	margin-bottom: 55px;
 
 	& .container {
-		background: url(../images/discount_bg.jpg) no-repeat center;
+		background: url(../images/discount_bg.jpg) repeat;
 	}
 
 	&__text {
