--- a/less/_social.less
+++ b/less/_social.less
@@ -19,25 +19,26 @@
 		display: block;
 		width: 20px;
 		height: 20px;
+		&:extend(.iconsheet);
 
 		&--vk {
-			background: url(../images/vk_icon.png) no-repeat center;
+			.icon(-7px, -335px);
 		}
 
 		&--fb {
-			background: url(../images/fb_icon.png) no-repeat center;
+			.icon(-3px, -104px);
 		}
 
 		&--gplus {
-			background: url(../images/gplus_icon.png) no-repeat center;
+			.icon(-7px, -134px);
 		}
 
 		&--tw {
-			background: url(../images/tw_icon.png) no-repeat center;
+			.icon(-5px, -307px);
 		}
 
 		&--email {
-			background: url(../images/email_icon.png) no-repeat center;
+			.icon(-6px, -72px);
 		}
 	}
 }
