--- a/less/_review.less
+++ b/less/_review.less
@@ -1,7 +1,6 @@
 .review {
 	&__item {
 		margin-bottom: 60px;
-		margin-right: 25px;
 		display: flex;
 	}
 
@@ -24,6 +23,7 @@
 	}
 
 	&__date {
+		display: block;
 		color: #656464;
 		margin-bottom: 15px;
 	}
