--- a/less/index.less
+++ b/less/index.less
@@ -1,6 +1,7 @@
 @import '_fonts.less';
 @import '_reset.less';
 @import '_base.less';
+@import '_icon.less'; // icon sprite sheet
 @import '_logo.less';
 @import '_menu.less';
 @import '_contacts.less';
