--- a/less/_news-top.less
+++ b/less/_news-top.less
@@ -1,5 +1,5 @@
 .news-top {
-	min-width: 165px;
+	width: 15.09%; // 160px
 
 	&__title {
 		color: #221f1f;
@@ -16,11 +16,11 @@
 	}
 
 	&__item {
-		width: 166px;
 		margin-bottom: 20px;
 	}
 
 	&__img {
+		display: block;
 		width: 100%;
 		height: auto;
 		opacity: 0.8;
