--- a/less/_review.less
+++ b/less/_review.less
@@ -2,23 +2,26 @@
 	&__item {
 		margin-bottom: 60px;
 		display: flex;
+		justify-content: space-between;
 	}
 
 	&__img {
-		min-width: 160px;
+		width: 160px;
 		height: 160px;
 		border-radius: 50%;
-		margin-right: 20px;
+		margin-right: 18px;
 		overflow: hidden;
 		background: url(../images/comment0.jpg) center;
 
 		& > img {
+			display: block;
 			width: 100%;
 			height: auto;
 		}
 	}
 
 	&__block {
+		width: 79.55%; // 700px
 		font-family: 'Roboto', sans-serif;
 	}
 
