correction html + css

--- a/less/_contacts.less
+++ b/less/_contacts.less
@@ -16,6 +16,7 @@
 		color: #f89513;
 		border-bottom: 1px solid #f89513;
 		transition: .2s all linear;
+		cursor: pointer;
 
 		&:hover {
 			color: #fff;
