--- a/less/_feedback-form.less
+++ b/less/_feedback-form.less
@@ -58,7 +58,9 @@
 		}
 
 		&-input {
-			display: none;
+			position: absolute;
+			z-index: -1;
+			opacity: 0;
 
 			&:checked + .feedback-form__radio-custom {
 				border: 1px solid #f89513;
