add welcome page + animation

--- a/less/_sentence.less
+++ b/less/_sentence.less
@@ -2,17 +2,18 @@
 	font-size: 1.286em; // 18px
 	color: #fff;
 	margin-bottom: 55px;
+	background: url(../images/discount_bg.jpg) repeat;
+	padding: 20px 0;
 
-	& .container {
-		background: url(../images/discount_bg.jpg) repeat;
+	&__container {
+		width: 650px;
+		margin: 0 auto;
 	}
 
 	&__text {
-		width: 650px;
-		margin: 0 auto;
 		font-weight: 300;
 		line-height: 1.8;
-		padding: 20px 0;
+		
 	}
 
 	&__discount {
