--- a/less/_base.less
+++ b/less/_base.less
@@ -1,3 +1,7 @@
+html, body {
+	height: 100%;
+}
+
 body {
 	font-family: 'OpenSans', sans-serif;
 	font-size: 14px;
@@ -6,6 +10,9 @@ body {
 
 .wrapper {
 	min-width: 1100px;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .container {
@@ -30,8 +37,7 @@ body {
 
 .header,
 .features,
-.footer,
-.sentence {
+.footer {
 	background: #131415;
 	color: #fff;
 }
@@ -88,5 +94,6 @@ body {
 }
 
 .footer {
+	margin-top: auto;
 	padding: 15px 0;
 }
