--- a/less/index.less
+++ b/less/index.less
@@ -1,7 +1,11 @@
+@import 'normalize.8.0.1.min.css';
 @import '_fonts.less';
 @import '_reset.less';
 @import '_base.less';
 @import '_icon.less'; // icon sprite sheet
+
+@import '_intro.less';
+
 @import '_logo.less';
 @import '_menu.less';
 @import '_contacts.less';
