--- a/less/_social.less
+++ b/less/_social.less
@@ -1,4 +1,6 @@
 .social {
+	text-align: center;
+	
 	&__title {
 		margin-bottom: 7px;
 	}
@@ -22,23 +24,23 @@
 		&:extend(.iconsheet);
 
 		&--vk {
-			.icon(-7px, -335px);
+			.icon(-7px, -441px);
 		}
 
 		&--fb {
-			.icon(-3px, -104px);
+			.icon(-3px, -137px);
 		}
 
 		&--gplus {
-			.icon(-7px, -134px);
+			.icon(-7px, -168px);
 		}
 
 		&--tw {
-			.icon(-5px, -307px);
+			.icon(-5px, -413px);
 		}
 
 		&--email {
-			.icon(-6px, -72px);
+			.icon(-6px, -106px);
 		}
 	}
 }
