--- a/less/_base.less
+++ b/less/_base.less
@@ -9,7 +9,7 @@ body {
 }
 
 .wrapper {
-	min-width: 1100px;
+	min-width: 1200px;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -18,7 +18,7 @@ body {
 .container {
 	padding-left: 20px;
 	padding-right: 20px;
-	max-width: 1060px;
+	max-width: 1160px;
 	margin: 0 auto;
 
 	&--block {
@@ -27,7 +27,7 @@ body {
 	}
 
 	&-form {
-		max-width: 560px;
+		max-width: 767px;
 		padding: 50px 70px;
 		margin: 0 auto;
 		background: #f3f3f3;
@@ -45,20 +45,30 @@ body {
 .header {
 	padding-top: 20px;
 	padding-bottom: 15px;
-	margin-bottom: 80px;
+	margin-bottom: 15px;
+}
+
+.header > .container,
+.footer > .container,
+.top > .container,
+.news__block,
+.center > .container {
+	display: flex;
+	justify-content: space-between;
 }
 
 .header > .container,
 .footer > .container {
-	display: flex;
-	justify-content: space-between;
 	align-items: center;
+}
+
+.top {
+	margin-bottom: 45px;
 }
 
 .banner {
 	height: 486px;
 	background: url(../images/banner.jpg) no-repeat center;
-	margin-bottom: 60px;
 }
 
 .section-title {
@@ -76,21 +86,22 @@ body {
 	}
 }
 
-.news {
-	padding: 65px 0;
-
-	&__block {
-		display: flex;
-	}
-
-	&__article {
-		width: 83.02%; // 880px
-		margin-right: 25px;
-	}
+.top__banner,
+.news__article,
+.content {
+	width: 74.57%; // 865px
 }
 
 .feedback {
 	margin-bottom: 50px;
+}
+
+.sidebar {
+	width: 23.71%; // 275px
+}
+
+.content {
+	padding-top: 10px;
 }
 
 .footer {
