--- a/less/_features.less
+++ b/less/_features.less
@@ -8,29 +8,23 @@
 	}
 
 	&__item {
-		max-width: 206px;
-		padding: 0 20px;
+		padding: 25px 35px 0;
+		border: 1px solid black;
 	}
 
-	&__img {
-		width: 68px;
-		height: 68px;
-		border-radius: 50%;
-		margin: 0 auto;
-		margin-bottom: 35px;
-		background: #f89513;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+	&__title {
+		font-size: 1.286em; // 18px
+		text-align: center;
+		text-transform: uppercase;
+		margin-bottom: 30px;
 	}
 
 	&__head {
 		font-size: 0.7857em; // 11px
-		font-weight: 700;
 		text-transform: uppercase;
 		text-align: center;
 		letter-spacing: 3px;
-		margin-bottom: 30px;
+		margin-bottom: 20px;
 	}
 
 	&__subs,
@@ -44,9 +38,13 @@
 		line-height: 1.5;
 	}
 
+	&__plus {
+		display: flex;
+	}
+
 	&__plus::before {
 		content: "\2022";
-		color: #fff;
-		margin-right: 30px;
+		color: #000;
+		margin-right: 25px;
 	}
 }
