--- a/less/_news-top.less
+++ b/less/_news-top.less
@@ -1,5 +1,11 @@
 .news-top {
-	width: 15.09%; // 160px
+	width: 23.71%; // 275px
+	text-align: center;
+
+	&__list {
+		width: 61.82%; // 170px
+		margin: 0 auto 50px;
+	}
 
 	&__title {
 		color: #221f1f;
@@ -7,6 +13,10 @@
 		letter-spacing: 3px;
 		text-transform: uppercase;
 		margin-bottom: 20px;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 
 	&__month {
