--- a/less/_pagination.less
+++ b/less/_pagination.less
@@ -5,6 +5,7 @@
 	font-family: 'Roboto', sans-serif;
 	display: flex;
 	justify-content: space-between;
+	margin-bottom: 50px;
 
 	&__text {
 		color: #656464;
