--- a/less/_sentence.less
+++ b/less/_sentence.less
@@ -3,12 +3,8 @@
 	color: #fff;
 	margin-bottom: 55px;
 	background: url(../images/discount_bg.jpg) repeat;
-	padding: 20px 0;
-
-	&__container {
-		width: 650px;
-		margin: 0 auto;
-	}
+	padding: 30px 25px;
+	text-align: center;
 
 	&__text {
 		font-weight: 300;
@@ -17,8 +13,10 @@
 	}
 
 	&__discount {
+		display: inline-block;
 		color: #f89513;
 		font-weight: 700;
+		border-bottom: 1px dashed transparent;
 
 		&:hover {
 			border-bottom: 1px dashed #f89513;
