--- a/less/_review.less
+++ b/less/_review.less
@@ -3,6 +3,7 @@
 		margin-bottom: 60px;
 		display: flex;
 		justify-content: space-between;
+		// align-items: flex-start;
 	}
 
 	&__img {
@@ -12,11 +13,6 @@
 		margin-right: 18px;
 		overflow: hidden;
 		background: url(../images/comment0.jpg) center;
-
-		& > img {
-			display: block;
-			width: 100%;
-		}
 	}
 
 	&__block {
