--- a/less/_base.less
+++ b/less/_base.less
@@ -21,9 +21,9 @@ body {
 	max-width: 1160px;
 	margin: 0 auto;
 
-	&--block {
-		box-sizing: border-box;
-		padding: 0 110px 50px;
+	&--flex {
+		display: flex;
+		justify-content: space-between;
 	}
 
 	&-form {
@@ -35,40 +35,27 @@ body {
 	}
 }
 
-.header,
-.features,
-.footer {
+.header, .features, .footer {
 	background: #131415;
 	color: #fff;
 }
 
 .header {
-	padding-top: 20px;
-	padding-bottom: 15px;
-	margin-bottom: 15px;
-}
-
-.header > .container,
-.footer > .container,
-.top > .container,
-.news__block,
-.center > .container {
-	display: flex;
-	justify-content: space-between;
-}
-
-.header > .container,
-.footer > .container {
-	align-items: center;
-}
-
-.top {
-	margin-bottom: 45px;
+	padding-top: 16px;
+	padding-bottom: 17px;
+	margin-bottom: 26px;
 }
 
 .banner {
 	height: 486px;
 	background: url(../images/banner.jpg) no-repeat center;
+}
+
+.aside-title {
+	font-size: 1.286em; // 18px
+	text-transform: uppercase;
+	text-align: center;
+	margin-bottom: 40px;
 }
 
 .section-title {
