--- a/less/_feedback-form.less
+++ b/less/_feedback-form.less
@@ -77,6 +77,7 @@
 			height: 18px;
 			border-radius: 50%;
 			border: 1px solid #c9c9c9;
+			transition: color .3s ease;
 
 			& > .feedback-form__radio-center {
 				position: absolute;
@@ -86,6 +87,7 @@
 				width: 8px;
 				height: 8px;
 				border-radius: 50%;
+				transition: background-color .3s ease;
 			}
 		}
 	}
