--- a/less/_partners.less
+++ b/less/_partners.less
@@ -3,23 +3,14 @@
 	padding: 25px;
 	margin-bottom: 30px;
 
-	&__title {
-		font-size: 1.286em; // 18px
-		text-transform: uppercase;
-		text-align: center;
-		margin-bottom: 50px;
-	}
-
 	&__list {
 		display: flex;
-		flex-wrap: wrap;
+		flex-direction: column;
 		align-items: center;
 	}
 
 	&__item {
 		margin-bottom: 50px;
-		width: 280px;
-		text-align: center;
 
 		&:last-child {
 			margin-bottom: 0;
@@ -27,6 +18,7 @@
 	}
 
 	&__link {
+		display: block;
 		filter: grayscale(1);
 		transition: .25s all linear;
 
