--- a/less/index.less
+++ b/less/index.less
@@ -1,4 +1,4 @@
-@import 'normalize.8.0.1.min.css';
+@import (less) '../css/normalize.8.0.1.min.css';
 @import '_fonts.less';
 @import '_reset.less';
 @import '_base.less';
