--- a/less/_base.less
+++ b/less/_base.less
@@ -46,6 +46,10 @@ body {
 	margin-bottom: 26px;
 }
 
+.logo:not(.logo--main):hover {
+	transform: scale(1.03);
+}
+
 .banner {
 	height: 486px;
 	background: url(../images/banner.jpg) no-repeat center;
