--- a/less/_contacts.less
+++ b/less/_contacts.less
@@ -9,6 +9,11 @@
 		font-weight: 700;
 		display: block;
 		margin-bottom: 3px;
+		transition: .3s color ease;
+
+		&:hover {
+			color: rgba(248, 149, 19,.7);
+		}
 	}
 
 	&__timework {
@@ -17,7 +22,7 @@
 		color: rgba(248, 149, 19,.7);
 		font-family: 'OpenSans', sans-serif;
 		border-bottom: 1px solid rgba(248, 149, 19,.7);
-		transition: .2s all linear;
+		transition: .2s all ease;
 		cursor: pointer;
 
 		&:hover {
