--- a/less/_feedback-form.less
+++ b/less/_feedback-form.less
@@ -77,7 +77,7 @@
 			height: 18px;
 			border-radius: 50%;
 			border: 1px solid #c9c9c9;
-			transition: color .3s ease;
+			transition: border-color .3s ease;
 
 			& > .feedback-form__radio-center {
 				position: absolute;
