correct validation main.html

--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ body {
 .section-title--form {
   text-transform: none;
 }
-.top__banner,
+.banner,
 .news__article,
 .content {
   width: 74.57%;
