--- a/less/_base.less
+++ b/less/_base.less
@@ -24,6 +24,7 @@ body {
 	&--flex {
 		display: flex;
 		justify-content: space-between;
+		align-items: flex-start;
 	}
 
 	&-form {
@@ -35,7 +36,7 @@ body {
 	}
 }
 
-.header, .features, .footer {
+.header, .footer {
 	background: #131415;
 	color: #fff;
 }
