--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,8 @@ body {
   display: flex;
   -webkit-box-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: start;
+          align-items: flex-start;
 }
 .container-form {
   max-width: 767px;
@@ -249,7 +251,6 @@ body {
   box-sizing: border-box;
 }
 .header,
-.features,
 .footer {
   background: #131415;
   color: #fff;
@@ -422,46 +423,69 @@ body {
   pointer-events: none;
 }
 .menu__link {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-align: center;
-          align-items: center;
-  padding: 10px;
-  color: #221f1f;
-}
-.menu__link::before {
-  content: '';
   display: inline-block;
-  margin-right: 18px;
+  position: relative;
+  padding: 10px 10px 10px 40px;
+  color: #221f1f;
+  -webkit-transition: .3s all ease;
+  transition: .3s all ease;
+}
+.menu__link::before,
+.menu__link::after {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  content: '';
+  display: block;
   width: 20px;
   height: 18px;
   background-image: url(../images/spritesheet.png);
   background-repeat: no-repeat;
+  -webkit-transform: translateY(-60%);
+          transform: translateY(-60%);
+  -webkit-transition: .3s opacity ease;
+  transition: .3s opacity ease;
 }
 .menu__link--disp::before {
   background-position: -10px -77px;
 }
+.menu__link--disp::after {
+  opacity: 0;
+  background-position: -10px -43px;
+}
 .menu__link--star::before {
   background-position: -10px -381px;
 }
+.menu__link--star::after {
+  opacity: 0;
+  background-position: -10px -343px;
+}
 .menu__link--service::before {
   background-position: -10px -268px;
+}
+.menu__link--service::after {
+  opacity: 0;
+  background-position: -10px -234px;
 }
 .menu__item.active > .menu__link,
 .menu__link:hover {
   color: #f89513;
 }
+.menu__item.active > .menu__link--disp::after,
+.menu__link--disp:hover::after,
+.menu__item.active > .menu__link--star::after,
+.menu__link--star:hover::after,
+.menu__item.active > .menu__link--service::after,
+.menu__link--service:hover::after {
+  opacity: 1;
+}
 .menu__item.active > .menu__link--disp::before,
-.menu__link--disp:hover::before {
-  background-position: -10px -43px;
-}
+.menu__link--disp:hover::before,
 .menu__item.active > .menu__link--star::before,
-.menu__link--star:hover::before {
-  background-position: -10px -343px;
-}
+.menu__link--star:hover::before,
 .menu__item.active > .menu__link--service::before,
 .menu__link--service:hover::before {
-  background-position: -10px -234px;
+  opacity: 0;
 }
 .contacts {
   font-style: normal;
@@ -473,40 +497,40 @@ body {
   font-size: 1.49em;
   font-weight: 700;
   display: block;
-  margin-bottom: 3px;
+  line-height: 1.4;
   -webkit-transition: .3s color ease;
   transition: .3s color ease;
 }
 .contacts__phone:hover {
   color: rgba(248, 149, 19, 0.7);
 }
+.contacts__link {
+  color: rgba(248, 149, 19, 0.7);
+  border-bottom: 1px solid rgba(248, 149, 19, 0.7);
+  -webkit-transition: .2s all linear;
+  transition: .2s all linear;
+}
 .contacts__timework {
   position: relative;
   display: inline-block;
-  color: rgba(248, 149, 19, 0.7);
   font-family: 'OpenSans', sans-serif;
-  border-bottom: 1px solid rgba(248, 149, 19, 0.7);
-  -webkit-transition: .2s all ease;
-  transition: .2s all ease;
-  cursor: pointer;
 }
-.contacts__timework:hover {
+.contacts__timework:hover .contacts__link {
   color: rgba(255, 255, 255, 0.7);
   border-bottom: 1px solid rgba(255, 255, 255, 0.7);
 }
-.contacts__timework:hover .contacts__popup {
+.contacts__timework:hover .contacts__link + .contacts__popup {
   right: 0;
   opacity: 1;
 }
 .contacts__popup {
+  z-index: 5;
   opacity: 0;
   position: absolute;
   top: 100%;
   right: 9999px;
-  z-index: 5;
   -webkit-transition: .4s opacity ease;
   transition: .4s opacity ease;
-  cursor: default;
 }
 .contacts__popup::before {
   content: '';
@@ -544,15 +568,6 @@ body {
   color: #221f1f;
 }
 .features {
-  padding-top: 60px;
-  padding-bottom: 80px;
-}
-.features__list {
-  display: -webkit-box;
-  display: flex;
-  justify-content: space-around;
-}
-.features__item {
   padding: 25px 35px 0;
   border: 1px solid black;
 }
