--- a/less/_features.less
+++ b/less/_features.less
@@ -1,6 +1,7 @@
 .features {
-	padding: 25px 35px 0;
+	padding: 25px 9.09% 0;
 	border: 1px solid black;
+	margin-bottom: 85px;
 
 	&__head {
 		font-size: 0.7857em; // 11px
@@ -23,6 +24,7 @@
 
 	&__plus {
 		display: flex;
+		text-align: left;
 	}
 
 	&__plus::before {
