--- a/less/_pagination.less
+++ b/less/_pagination.less
@@ -1,6 +1,6 @@
 .pagination {
 	text-align: center;
-	width: 380px;
+	max-width: 380px;
 	margin: 0 auto;
 	font-family: 'Roboto', sans-serif;
 	display: flex;
