--- a/less/_review.less
+++ b/less/_review.less
@@ -3,12 +3,11 @@
 		margin-bottom: 60px;
 		display: flex;
 		justify-content: space-between;
-		// align-items: flex-start;
+		align-items: flex-start;
 	}
 
 	&__img {
-		width: 170px;
-		height: 168px;
+		max-width: 170px;
 		border-radius: 50%;
 		margin-right: 18px;
 		overflow: hidden;
