--- a/less/_sentence.less
+++ b/less/_sentence.less
@@ -3,8 +3,9 @@
 	color: #fff;
 	margin-bottom: 55px;
 	background: url(../images/discount_bg.jpg) repeat;
-	padding: 30px 25px;
+	padding: 30px 9.09%;
 	text-align: center;
+	word-wrap: break-word;
 
 	&__text {
 		font-weight: 300;
